--- a/resources/style.css
+++ b/resources/style.css
@@ -44,3 +44,39 @@ header nav span{
 .nav-item {
   color: black;
 }
+
+
+/* ---- MAIN-CONTENT ---- */
+
+.main-content {
+  display: flex;
+  width: 1260px;
+  padding-top: 120px;
+  margin: 0 auto 80px auto;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  margin-right: 30px;
+
+}
+
+.column.large {
+  width: 630px;
+}
+
+.column.medium {
+  width: 300px;
+}
+
+.column.small {
+  width: 240px;
+}
+
+
+/* ---- TEMP ---- */
+
+div {
+  border: 1px solid black;
+}
