--- a/resources/style.css
+++ b/resources/style.css
@@ -7,6 +7,7 @@ header {
   width: 100%;
   height: 80px;
   position: fixed;
+  top: 0px;
   z-index: 1;
   border-bottom: 1px solid black;
   background-color: white;
@@ -74,9 +75,81 @@ header nav span{
   width: 240px;
 }
 
+/*.narrative {
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}*/
 
-/* ---- TEMP ---- */
+.stories {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.story {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.news-bites {
+  display: flex;
+  flex-direction: column;
+}
+
+.news-bites h3 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.bite {
+  padding: 10px 20px;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  border-bottom: 1px solid black;
+}
+/* ---- IMAGES ---- */
+
+.img-content {
+  display: flex;
+  justify-content: center;
+  height: 300px;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+
+}
+.lead-story-tuna {
+  background-image: url(./images/img-story-main.png);
+  width: 630px;
+  font-size: 40px;
+  text-align: left;
+}
+
+.story-cat {
+  background-image: url(./images/img-story-1.png);
+}
+
+.sub-story-earth {
+  background-image: url(./images/img-story-2.png);
+}
+
+.sub-story-erase {
+  background-image: url(./images/img-story-3.png);
+}
+
+.cookie {
+  height: 240px;
+}
+/* ---- TEMP ----
 
 div {
   border: 1px solid black;
 }
+*/
